--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "@angular/compiler-cli": "5.2.9",
     "@angular/platform-browser": "5.2.9",
     "@angular/platform-browser-dynamic": "5.2.9"
+  },
+  "devDependencies": {
+    "@ionic/app-scripts": "3.2.3"
   }
 }
